Refactored some changes for inter connection